crates/fig-parser/tests/snapshots/integration_tests__generics__default_params.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Buffer
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: U8
      requires: []
      fields:
        - name: data
          ty:
            Pointer:
              nullable: false
              mutable: true
              element_type:
                Path:
                  path:
                    segments:
                      - T
                  generic_args: []
          visibility: Default
          annotations: []
        - name: len
          ty: USize
          visibility: Default
          annotations: []
        - name: cap
          ty: USize
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: create_buffer
        outer_generic_params: []
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: U8
        self_param: ~
        params:
          - name: cap
            ty: USize
        return_types:
          - Path:
              path:
                segments:
                  - Buffer
              generic_args:
                - Path:
                    path:
                      segments:
                        - T
                    generic_args: []
      body:
        statements:
          - Pass
