crates/fig-parser/tests/snapshots/integration_tests__generics__where_compound_bounds.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: process
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Display
                    generic_args: []
                - Path:
                    path:
                      segments:
                        - Debug
                    generic_args: []
                - Path:
                    path:
                      segments:
                        - Clone
                    generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: val
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: sorted_insert
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Ord
                    generic_args: []
                - Path:
                    path:
                      segments:
                        - Copy
                    generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: slice
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Array:
                    element_type:
                      Path:
                        path:
                          segments:
                            - T
                        generic_args: []
                    size: ~
          - name: val
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
